<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/house"
    tools:context=".view.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/get_start_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="@string/get_start"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            android:shadowColor="@color/gray"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="20"/>

        <EditText
            android:id="@+id/usernameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_start_header"
            android:layout_margin="20dp"
            android:background="@color/tran_gray"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEntry"
            app:layout_constraintVertical_bias="0.037"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEntry"
            android:layout_margin="20dp"
            android:background="@color/tran_gray"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_start_header"
            app:layout_constraintVertical_bias="0.027"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEntry"
            android:layout_margin="20dp"
            android:background="@color/tran_gray"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEntry"
            app:layout_constraintVertical_bias="0.048"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/confirmPasswordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEntry"
            android:layout_margin="20dp"
            android:background="@color/tran_gray"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/confirm_pw"

            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEntry"
            app:layout_constraintVertical_bias="0.058"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordEntry"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEntry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

