<resources>
    <string name="app_name">EasySublet</string>
    <string name="hello">Hello</string>
    <string name="email">Email</string>>
    <string name="password">Password</string>>
    <string name="post_title_hint">Enter a roommatePost title</string>
    <string name="sign_up_question">Don\'t have an account? |</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="get_start">Let\'s get started!</string>
    <string name="username">Username</string>>
    <string name="old_pw">Old Password</string>
    <string name="new_pw">New Password</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="setting">Settings</string>
    <string name="change_pw">Change Password</string>
    <string name="delete_acc">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="map_button">Map Button</string>
    <string name="image_description">This is an image</string>
    <string name="required">Required*</string>
    <string name="address">Address</string>
    <string name="time_period">Time Period</string>
    <string name="rent">Rent per Month</string>
    <string name="bathroom">Bathroom Num</string>
    <string name="bedroom">Bedroom Num</string>
    <string name="post">Post</string>
    <string name="contact">Contact Phone / Email</string>
    <string name="gender">Gender</string>
    <string name="more_info">Provide more information...</string>
    <string name="other_info">Additional information...</string>
    <string name="add_photo_des">Click to add photo for the post</string>
    <string name="preference_of_gender">Preference of Gender</string>
    <string name="pet">Pet Friendly</string>
    <string name="furnished">Furnished</string>


    <string name="preferred_address">Preferred Area</string>
    <string name="preferred_period">Approximate Time Period</string>
    <string name="preferred_rent">Preferred Rent Per Month</string>
    <string name="preferred_bathroom">Bathroom Num</string>
    <string name="preferred_bedroom">Bedroom Num</string>
    <string name="preferred_pet">Has a Pet</string>
    <string name="preferred_furnished">Require Furnished</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>

    <string name="withPet">With Pet</string>
    <string name="find_home">Find Home</string>
    <string name="find_roommate">Find Roommates</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_home_post">HomePostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update">Update</string>

    <string name="mapbox_access_token">pk.eyJ1IjoicmFuZG9tdXNlcm5vIiwiYSI6ImNsMXoyaW45bTAwNWoza3MxYnA1enBzMHIifQ.NKN7sUKkCSQ8fufOKOi2PA</string>
    <string name="roommate_post">Roommate Post</string>
    <string name="home_post">Home Post</string>
    <string name="update_email">Update Email</string>
    <string name="p_profile">\'s Profile</string>
    <string name="search">Search</string>
    <string name="edit_home_post">Edit Home Post</string>
    <string name="edit_roommate_post">Edit Roommate Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="new_home_post">New home post</string>
    <string name="new_roommate_post">New Roommate post</string>
    <string name="login_success">Logged In successfully</string>
    <string name="login_error">Login in failed</string>
    <string name="language">中文</string>
    <string name="change_language">更改为中文</string>
    <string name="register_succeeded">Register succeeded</string>
</resources>